--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "start": "serve -s dist",
+    "build": "npm install && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
