--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "start": "serve -s dist",
-    "build": "npm install && vite build",
+    "build": "npm install --force && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
